# Nom

./: .gitignore  .mcp.json  AGENTS.md  BLUEPRINT.md  CLAUDE.md  CONTRIBUTING.md  INIT.md  Plan.md  README.md  ROADMAP_TO_100.md  SYNTAX.md  check_schema.py  implementation_plan.md  libnom_graph.rlib  maria-hill-magik-sif.md  nom  nom_state_machine_report.md  novel  task.md
nom-canvas/: Cargo.toml  check_output.txt  check_output2.txt  index.html  package-lock.json  package.json
nom-canvas/.cargo/: config.toml
nom-canvas/crates/nom-blocks/: Cargo.toml
nom-canvas/crates/nom-blocks/src/: ancestry.rs  app_manifest.rs  block_config.rs  block_model.rs  block_schema.rs  block_schema_v2.rs  block_selection.rs  block_transformer.rs  block_tree.rs  connector.rs  content_hash.rs  crdt_merge.rs  dataview.rs  dict_reader.rs  diff.rs  drawing.rs  edgeless_text.rs  embed.rs  embed_registry.rs  flavour.rs  flow_step_table.rs  frame.rs  graph_node.rs  history.rs  latex.rs  lib.rs  media.rs  nomx.rs  nomx_manifest.rs  prose.rs  rich_text.rs  schema_registry.rs  shared_types.rs  slot.rs  stub_dict.rs  table.rs  table_block.rs  tree_query.rs  validators.rs  workspace.rs  (+1 more)
nom-canvas/crates/nom-canvas-cli/: Cargo.toml
nom-canvas/crates/nom-canvas-cli/src/: app.rs  bench.rs  bootstrap_cli.rs  compose.rs  convert.rs  demo.rs  dict.rs  flow.rs  lib.rs  main.rs  serve.rs  ux.rs
nom-canvas/crates/nom-canvas-cli/tests/: api_integration.rs
nom-canvas/crates/nom-canvas-core/: Cargo.toml
nom-canvas/crates/nom-canvas-core/src/: affine_tokens.rs  animation_card.rs  bezier.rs  chart.rs  color_space.rs  commands.rs  coords.rs  design_tokens.rs  element.rs  element_order.rs  elements.rs  fit.rs  frosted_glass.rs  frosted_pass.rs  frosted_pipeline.rs  gesture.rs  glyph_cache.rs  groups.rs  history.rs  hit_test.rs  hit_testing.rs  hit_zone.rs  layout_grid.rs  lib.rs  marquee.rs  motion_path.rs  mutation.rs  pan.rs  pixel_diff.rs  pointer.rs  render_frame.rs  render_pipeline.rs  rendering_hints.rs  (+14 more)
nom-canvas/crates/nom-canvas-graph/: Cargo.toml
nom-canvas/crates/nom-canvas-intent/: Cargo.toml
nom-canvas/crates/nom-canvas-tests/: Cargo.toml
nom-canvas/crates/nom-cli/: Cargo.toml
nom-canvas/crates/nom-collab/: Cargo.toml
nom-canvas/crates/nom-compiler-bridge/: Cargo.toml
nom-canvas/crates/nom-compose/: Cargo.toml
nom-canvas/crates/nom-editor/: Cargo.toml
nom-canvas/crates/nom-gpui/: Cargo.toml
nom-canvas/crates/nom-graph/: Cargo.toml
nom-canvas/crates/nom-graph-v2/: Cargo.toml
nom-canvas/crates/nom-intent/: Cargo.toml
nom-canvas/crates/nom-lint/: Cargo.toml
nom-canvas/crates/nom-media/: Cargo.toml
nom-canvas/crates/nom-memoize/: Cargo.toml
nom-canvas/crates/nom-panels/: Cargo.toml
nom-canvas/crates/nom-telemetry/: Cargo.toml
nom-canvas/crates/nom-theme/: Cargo.toml
nom-canvas/crates/nom-ux/: Cargo.toml
nom-canvas/nom-grammar-wasm/: Cargo.toml
nom-canvas/nom-grammar-wasm/src/: lib.rs
nom-canvas/scripts/: build_wasm.sh
nom-canvas/src/: actions.ts  artifact-preview.ts  canvas.ts  connectors.ts  credentials.ts  elements.ts  engine.ts  folding.ts  grid.ts  hints.ts  lsp-bridge.ts  main.ts  multicursor.ts  notifications.ts  palette.ts  parser.ts  preview.ts  project.ts  reactive.ts  renderer.ts  sandbox-eval.ts  schema.ts  selection.ts  shortcuts.ts  statusbar.ts  streaming.ts  styles.css  theme.ts  transform.ts  wiring.ts  workspace.ts
nom-canvas/src-tauri/: Cargo.toml  tauri.conf.json
nom-canvas/src-tauri/src/: lib.rs  lsp.rs  main.rs
nom-canvas/tests/: golden_paths.rs
nom-compiler/: Cargo.toml  TESTING.md  crate-audit-report.md  rust-toolchain.toml
nom-compiler/crates/nom-app/: Cargo.toml
nom-compiler/crates/nom-ast/: Cargo.toml
nom-compiler/crates/nom-bench/: Cargo.toml
nom-compiler/crates/nom-cli/: Cargo.toml
nom-compiler/crates/nom-codegen/: Cargo.toml
nom-compiler/crates/nom-concept/: Cargo.toml
nom-compiler/crates/nom-config/: Cargo.toml
nom-compiler/crates/nom-corpus/: Cargo.toml
nom-compiler/crates/nom-diagnostics/: Cargo.toml
nom-compiler/crates/nom-dict/: Cargo.toml  LEGACY_REMOVAL.md
nom-compiler/crates/nom-extract/: Cargo.toml
nom-compiler/crates/nom-flow/: Cargo.toml
nom-compiler/crates/nom-grammar/: Cargo.toml
nom-compiler/crates/nom-graph/: Cargo.toml
nom-compiler/crates/nom-intent/: Cargo.toml
nom-compiler/crates/nom-lexer/: Cargo.toml
nom-compiler/crates/nom-llvm/: Cargo.toml  build.rs
nom-compiler/crates/nom-locale/: Cargo.toml
nom-compiler/crates/nom-lsp/: Cargo.toml
nom-compiler/crates/nom-media/: Cargo.toml
nom-compiler/crates/nom-parser/: Cargo.toml
nom-compiler/crates/nom-planner/: Cargo.toml
nom-compiler/crates/nom-resolver/: Cargo.toml
nom-compiler/crates/nom-runtime/: Cargo.toml
nom-compiler/crates/nom-score/: Cargo.toml
nom-compiler/crates/nom-search/: Cargo.toml
nom-compiler/crates/nom-security/: Cargo.toml
nom-compiler/crates/nom-translate/: Cargo.toml
nom-compiler/crates/nom-types/: Cargo.toml
nom-compiler/crates/nom-ux/: Cargo.toml
nom-compiler/crates/nom-verifier/: Cargo.toml
nom-compiler/dictionary/: seed.sql
nom-compiler/examples/: README.md  auth.nom  auth.rs  best_practice.nom  contracts.nomx  custom_word.nom  draft_essay.md  draft_paragraph.md  draft_sentence.md  draft_todo_app.md  greet_sentence.nomx  hello.nom  hello.nomx  hello_llvm.nom  imperative.nom  loops.nomx  mixed_forms.nomx  natural.nom  natural_pure.nom  run_lexer.nom  test_auth.nom  todo_app.nomx  webapi.nom
nom-compiler/examples/agent_demo/: README.md  agent.nom
nom-compiler/examples/agent_demo_vn/: README.md  agent.nom
nom-compiler/examples/concept_demo/: README.md  app.nom
nom-compiler/examples/self-host/: README.md  parser.nomx  pipeline.nomx  tokenizer.nomx
nom-compiler/scripts/: llvm_config_shim.rs
nom-compiler/scripts/llvm-shim/: llvm-config.bat
nom-compiler/stdlib/: prelude.nom  prelude_vi.nom
nom-compiler/stdlib/self_host/: README.md  ast.nom  ast_printer.nom  codegen.nom  lexer.bc  lexer.ll  lexer.nom  parser.nom  planner.nom  resolver.nom  typechecker.nom  verifier.nom
(+987 files in other folders)
