[workspace]
resolver = "2"
members = [
    "crates/nom-gpui",
    "crates/nom-canvas-core",
    "crates/nom-editor",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
authors = ["Nom"]

[workspace.dependencies]
# GPU rendering (versions aligned with Zed's gpui_wgpu crate)
wgpu = "22"
etagere = "0.2"
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.3"

# Layout
taffy = "0.6"

# Text shaping + rasterization (versions from Zed gpui_wgpu end-to-end read)
cosmic-text = "0.12"
swash = "0.2"

# Windowing
winit = "0.30"
raw-window-handle = "0.6"

# Shared utilities
parking_lot = "0.12"
smallvec = "1.13"
thiserror = "1.0"
ropey = "1.6"

# Dev
anyhow = "1.0"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
# Allow some pragmatic patterns in GPU code
too_many_arguments = "allow"
new_without_default = "allow"
