[workspace]
resolver = "2"
members = [
  "crates/nom-gpui",
  "crates/nom-canvas-core",
  "crates/nom-theme",
  "crates/nom-editor",
  "crates/nom-blocks",
  "crates/nom-compiler-bridge",
  "crates/nom-panels",
  "crates/nom-compose",
  "crates/nom-graph",
  "crates/nom-memoize",
  "crates/nom-telemetry",
  "crates/nom-collab",
  "crates/nom-lint",
  "crates/nom-cli",
  "crates/nom-intent",
]

[workspace.dependencies]
wgpu = "0.19"
winit = "0.29"
taffy = "0.4"
cosmic-text = "0.11"
etagere = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
bytemuck = { version = "1", features = ["derive"] }
ropey = "1.6"
rstar = "0.12"
lru = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
# These patterns appear exclusively in test modules verifying design invariants
# (token scale ordering, colour palette ranges, etc.). The assertions are
# intentional constant-value guards, not logic errors.
assertions_on_constants = "allow"
# Test helpers build slice arguments with vec![…] because the API signature
# takes &[T]. Converting every test to array syntax would reduce readability
# without improving correctness.
useless_vec = "allow"
# nom-lint test infrastructure builds expected strings with iterator-based
# repeat patterns; these are clear and intentional.
manual_str_repeat = "allow"
iter_repeat_n_take = "allow"
manual_repeat_n = "allow"
