[workspace]
resolver = "2"
members = [
    "crates/nom-lexer",
    "crates/nom-parser",
    "crates/nom-ast",
    "crates/nom-resolver",
    "crates/nom-verifier",
    "crates/nom-planner",
    "crates/nom-codegen",
    "crates/nom-cli",
    "crates/nom-diagnostics",
    "crates/nom-security",
    "crates/nom-types",
    "crates/nom-dict",
    "crates/nom-extract",
    "crates/nom-score",
    "crates/nom-config",
    "crates/nom-translate",
    "crates/nom-graph",
    "crates/nom-search",
    "crates/nom-llvm",
    "crates/nom-runtime",
    "crates/nom-media",
    "crates/nom-ux",
    "crates/nom-corpus",
    "crates/nom-bench",
    "crates/nom-app",
    "crates/nom-flow",
    "crates/nom-concept",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/nom-lang"

[workspace.dependencies]
# Shared dependencies across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
ariadne = "0.4"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
sha2 = "0.10"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tree-sitter = "0.26"
# Core language grammars (always compiled)
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
# Extended language grammars for 50-language analysis
# Official tree-sitter org crates (use tree-sitter-language LanguageFn, compatible with ts 0.26)
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-scala = "0.25"
tree-sitter-haskell = "0.23"
tree-sitter-ocaml = "0.24"
tree-sitter-julia = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-json = "0.24"
tree-sitter-regex = "0.25"
# Community crates (verified tree-sitter 0.26 compatible via LanguageFn)
tree-sitter-yaml = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-lua = "0.5"
tree-sitter-r = "1.2"
tree-sitter-zig = "1.1"
tree-sitter-elm = "5.9"
tree-sitter-objc = "3.0"
tree-sitter-verilog = "1.0"
tree-sitter-make = "1.1"
tree-sitter-cmake = "0.7"
tree-sitter-racket = "0.24"
tree-sitter-erlang = "0.15"
tree-sitter-d = "0.8"
tree-sitter-fortran = "0.5"
tree-sitter-proto = "0.4"
tree-sitter-elixir = "0.3"
tree-sitter-groovy = "0.1"
tree-sitter-swift = "0.7"
tree-sitter-dart = "0.1"
tree-sitter-nix = "0.3"
tree-sitter-glsl = "0.2"
tree-sitter-graphql = "0.1"
tree-sitter-latex = "0.1"
walkdir = "2"
globset = "0.4"
regex = "1"
