[package]
name = "nom-grammar-wasm"
version = "0.1.0"
edition = "2024"
description = "WASM bridge for nom-grammar Jaccard matching — browser-side keystroke feedback"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
