[package]
name = "nom-canvas"
version = "0.1.0"
description = "NomCanvas — Canvas-first IDE for the Nom programming language"
authors = ["LLg Trn"]
license = ""
repository = ""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nom_canvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
nom-concept = { path = "../../nom-compiler/crates/nom-concept" }
nom-dict = { path = "../../nom-compiler/crates/nom-dict" }
nom-grammar = { path = "../../nom-compiler/crates/nom-grammar" }
nom-search = { path = "../../nom-compiler/crates/nom-search" }
nom-types = { path = "../../nom-compiler/crates/nom-types" }
nom-score = { path = "../../nom-compiler/crates/nom-score" }
nom-app = { path = "../../nom-compiler/crates/nom-app" }
nom-media = { path = "../../nom-compiler/crates/nom-media" }
nom-extract = { path = "../../nom-compiler/crates/nom-extract" }
nom-security = { path = "../../nom-compiler/crates/nom-security" }
