[package]
name = "nom-blocks"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Block schema, model, transformer, selection and config for NomCanvas"

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
smallvec = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
