[package]
name = "nom-canvas-tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "golden_paths"
path = "tests/golden_paths.rs"

[dev-dependencies]
nom-compiler-bridge = { path = "../nom-compiler-bridge", default-features = false }
nom-canvas-core = { path = "../nom-canvas-core" }
nom-compose = { path = "../nom-compose" }
nom-intent = { path = "../nom-intent" }
nom-editor = { path = "../nom-editor" }
nom-blocks = { path = "../nom-blocks" }
nom-graph = { path = "../nom-graph" }
nom-panels = { path = "../nom-panels" }
nom-theme = { path = "../nom-theme" }
nom-cli = { path = "../nom-cli" }
nom-telemetry = { path = "../nom-telemetry" }
nom-collab = { path = "../nom-collab" }

[lints]
workspace = true
