[package]
name = "nom-collab"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CRDT snapshot + protocol scaffolding for Nom collab server"

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
parking_lot = { workspace = true }
