[package]
name = "nom-compiler-bridge"
version = "0.1.0"
edition = "2021"

[features]
default = []
compiler = ["nom-concept", "nom-dict", "nom-grammar", "nom-score", "nom-search"]

[dependencies]
nom-blocks = { path = "../nom-blocks" }
crossbeam-channel = { workspace = true }
tokio = { workspace = true }
lru = { workspace = true }
nom-concept  = { path = "../../../nom-compiler/crates/nom-concept",  optional = true }
nom-dict     = { path = "../../../nom-compiler/crates/nom-dict",     optional = true }
nom-grammar  = { path = "../../../nom-compiler/crates/nom-grammar",  optional = true }
nom-score    = { path = "../../../nom-compiler/crates/nom-score",    optional = true }
nom-search   = { path = "../../../nom-compiler/crates/nom-search",   optional = true }
