[package]
name = "nom-compiler-bridge"
version = "0.1.0"
edition = "2021"

[features]
default = ["compiler"]
compiler = ["nom-concept", "nom-dict", "nom-grammar", "nom-score", "nom-types", "nom-search", "rusqlite", "nom-planner"]
candle-cpu = []
candle-cuda = ["candle-core/cuda", "candle-nn/cuda"]
candle-metal = ["candle-core/metal", "candle-nn/metal"]

[dependencies]
nom-blocks = { path = "../nom-blocks" }
nom-editor = { path = "../nom-editor" }
crossbeam-channel = { workspace = true }
tokio = { workspace = true }
lru = { workspace = true }
rusqlite     = { workspace = true, optional = true }
nom-concept  = { path = "../../../nom-compiler/crates/nom-concept",  optional = true }
nom-dict     = { path = "../../../nom-compiler/crates/nom-dict",     optional = true }
nom-grammar  = { path = "../../../nom-compiler/crates/nom-grammar",  optional = true }
nom-score    = { path = "../../../nom-compiler/crates/nom-score",    optional = true }
nom-types    = { path = "../../../nom-compiler/crates/nom-types",    optional = true }
nom-search   = { path = "../../../nom-compiler/crates/nom-search",   optional = true }
nom-planner  = { path = "../../../nom-compiler/crates/nom-planner",  optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
candle-core = { version = "0.10", default-features = false }
candle-nn = { version = "0.10", default-features = false }

[lints]
workspace = true
