[package]
name = "nom-compose"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Backend dispatch + task queue + provider router for Nom compositions"

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
smallvec = { workspace = true }
parking_lot = { workspace = true }
