[package]
name = "nom-gpui"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { workspace = true }
winit = { workspace = true }
taffy = { workspace = true }
cosmic-text = { workspace = true }
etagere = { workspace = true }
bytemuck = { workspace = true }
lru = { workspace = true }
pollster = "0.3"
