[package]
name = "nom-graph-v2"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Pull-based DAG execution engine with 4 cache strategies"

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
smallvec = { workspace = true }
parking_lot = { workspace = true }
