[package]
name = "nom-lint"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Sealed-trait linter framework for Nom source"

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
smallvec = { workspace = true }
