[package]
name = "nom-memoize"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Thread-local memoization primitive (comemo pattern, no external dep)"

[lints]
workspace = true

[dependencies]
parking_lot = { workspace = true }
