[package]
name = "nom-panels"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Panel state and data layer for NomCanvas IDE (sidebar, toolbar, preview, library, command palette, statusbar, mode switcher, properties)"

[lints]
workspace = true

[dependencies]
parking_lot = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
