[package]
name = "nom-theme"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Design tokens, color system, and theme modes for NomCanvas"

[lints]
workspace = true

[dependencies]
nom-gpui = { path = "../nom-gpui" }
