[package]
name = "nom-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nom-types = { path = "../nom-types" }
nom-ux = { path = "../nom-ux" }
nom-dict = { path = "../nom-dict" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
