[package]
name = "nom-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nom"
path = "src/main.rs"

[dependencies]
nom-ast = { path = "../nom-ast" }
nom-lexer = { path = "../nom-lexer" }
nom-parser = { path = "../nom-parser" }
nom-diagnostics = { path = "../nom-diagnostics" }
nom-resolver = { path = "../nom-resolver" }
nom-verifier = { path = "../nom-verifier" }
nom-planner = { path = "../nom-planner" }
nom-codegen = { path = "../nom-codegen" }
nom-security = { path = "../nom-security" }
nom-types = { path = "../nom-types" }
nom-dict = { path = "../nom-dict" }
nom-extract = { path = "../nom-extract" }
nom-score = { path = "../nom-score" }
nom-config = { path = "../nom-config" }
nom-translate = { path = "../nom-translate" }
nom-graph = { path = "../nom-graph" }
nom-search = { path = "../nom-search" }
nom-llvm = { path = "../nom-llvm" }
nom-media = { path = "../nom-media" }
nom-corpus = { path = "../nom-corpus" }
clap = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
