[package]
name = "nom-concept"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
nom-grammar = { path = "../nom-grammar" }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
