[package]
name = "nom-corpus"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nom-types = { path = "../nom-types" }
nom-dict = { path = "../nom-dict" }
nom-parser = { path = "../nom-parser" }
nom-planner = { path = "../nom-planner" }
nom-resolver = { path = "../nom-resolver" }
nom-llvm = { path = "../nom-llvm" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
sha2 = { workspace = true }
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
swc_common = "21"
swc_ecma_ast = "23"
swc_ecma_parser = { version = "38", features = ["typescript"] }
rusqlite = { workspace = true }

[dev-dependencies]
