[package]
name = "nom-extract"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nom-types = { path = "../nom-types" }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-go = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1"
