[package]
name = "nom-extract"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nom-types = { path = "../nom-types" }
tree-sitter = { workspace = true }
# Core language grammars (always compiled)
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-go = { workspace = true }
# Extended language grammars for 50-language analysis (optional)
tree-sitter-java = { workspace = true, optional = true }
tree-sitter-c-sharp = { workspace = true, optional = true }
tree-sitter-ruby = { workspace = true, optional = true }
tree-sitter-php = { workspace = true, optional = true }
tree-sitter-swift = { workspace = true, optional = true }
tree-sitter-scala = { workspace = true, optional = true }
tree-sitter-haskell = { workspace = true, optional = true }
tree-sitter-ocaml = { workspace = true, optional = true }
tree-sitter-elixir = { workspace = true, optional = true }
tree-sitter-lua = { workspace = true, optional = true }
tree-sitter-r = { workspace = true, optional = true }
tree-sitter-julia = { workspace = true, optional = true }
tree-sitter-bash = { workspace = true, optional = true }
tree-sitter-html = { workspace = true, optional = true }
tree-sitter-css = { workspace = true, optional = true }
tree-sitter-json = { workspace = true, optional = true }
tree-sitter-yaml = { workspace = true, optional = true }
tree-sitter-toml-ng = { workspace = true, optional = true }
tree-sitter-zig = { workspace = true, optional = true }
tree-sitter-dart = { workspace = true, optional = true }
tree-sitter-erlang = { workspace = true, optional = true }
tree-sitter-elm = { workspace = true, optional = true }
tree-sitter-nix = { workspace = true, optional = true }
tree-sitter-d = { workspace = true, optional = true }
tree-sitter-objc = { workspace = true, optional = true }
tree-sitter-fortran = { workspace = true, optional = true }
tree-sitter-cmake = { workspace = true, optional = true }
tree-sitter-make = { workspace = true, optional = true }
tree-sitter-proto = { workspace = true, optional = true }
tree-sitter-regex = { workspace = true, optional = true }
tree-sitter-verilog = { workspace = true, optional = true }
tree-sitter-racket = { workspace = true, optional = true }
tree-sitter-glsl = { workspace = true, optional = true }
tree-sitter-graphql = { workspace = true, optional = true }
tree-sitter-latex = { workspace = true, optional = true }
tree-sitter-groovy = { workspace = true, optional = true }
walkdir = { workspace = true }
globset = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1"
thiserror = { workspace = true }

[features]
default = ["all-grammars"]
all-grammars = [
    "tree-sitter-java",
    "tree-sitter-c-sharp",
    "tree-sitter-ruby",
    "tree-sitter-php",
    "tree-sitter-swift",
    "tree-sitter-scala",
    "tree-sitter-haskell",
    "tree-sitter-ocaml",
    "tree-sitter-elixir",
    "tree-sitter-lua",
    "tree-sitter-r",
    "tree-sitter-julia",
    "tree-sitter-bash",
    "tree-sitter-html",
    "tree-sitter-css",
    "tree-sitter-json",
    "tree-sitter-yaml",
    "tree-sitter-toml-ng",
    "tree-sitter-zig",
    "tree-sitter-dart",
    "tree-sitter-erlang",
    "tree-sitter-elm",
    "tree-sitter-nix",
    "tree-sitter-d",
    "tree-sitter-objc",
    "tree-sitter-fortran",
    "tree-sitter-cmake",
    "tree-sitter-make",
    "tree-sitter-proto",
    "tree-sitter-regex",
    "tree-sitter-verilog",
    "tree-sitter-racket",
    "tree-sitter-glsl",
    "tree-sitter-graphql",
    # "tree-sitter-latex",  # disabled: external scanner linking issue on Windows
    "tree-sitter-groovy",
]
