[package]
name = "nom-intent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
nom-dict = { path = "../nom-dict" }
sha2 = { workspace = true }
