[package]
name = "nom-llvm"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
nom-ast = { path = "../nom-ast" }
nom-planner = { path = "../nom-planner" }
inkwell = { version = "0.5", features = ["llvm18-0", "llvm18-0-no-llvm-linking"] }
thiserror.workspace = true

[build-dependencies]
cc = "1"
