[package]
name = "nom-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
lsp-server = "0.7"
lsp-types = "0.95"
nom-intent = { path = "../nom-intent" }
nom-dict = { path = "../nom-dict" }
nom-grammar = { path = "../nom-grammar" }

[dev-dependencies]
tempfile = "3"
