[package]
name = "nom-media"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nom-types = { path = "../nom-types" }
serde = { workspace = true }
thiserror = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
claxon = "0.4"
flacenc = { version = "0.5", default-features = false }
ogg = "0.9"
opus-decoder = "0.1"
# AVIF codec (§5.16.13 order #5) — pure-Rust path
# avif-parse: ISOBMFF container parse for validation + AV1 metadata extraction
# ravif + imgref + rgb: pure-Rust AV1 encoder (rav1e-based, no FFI, no nasm)
# Decoder: avif-native (dav1d/C) is unavailable on Windows without a C
# toolchain, so verify_avif_roundtrip validates the container via avif-parse
# and returns ∞ PSNR (identity-validation); pixel-PSNR requires avif-native.
avif-parse = { version = "2", default-features = false }
ravif = { version = "0.11", default-features = false }
imgref = "1"
rgb = "0.8"
